syntax = "proto3";
package message;

message PingMsg {
	string hostAddr = 1;
	uint32 msgTimeNano = 2;
	string seedNodeAddr = 3;
}

message PingMsgResp {
	bool isSuccess = 1;
}

message TraceReport {
	string fromHostAddr = 1;
	uint32 fromHostMsgTimeNano = 2;
	string toHostAddr = 3;
	uint32 toHostMsgTimeNano = 4;
	string seedNodeAddr = 5;
	bool isTransmissionSuccess = 6;
}

message TraceReportResp {
	bool isSuccess = 1;
}

service WorkerService {
	rpc PingNode(PingMsg) returns (PingMsgResp);
}

service TransmitterService {
	rpc PingNode(PingMsg) returns (PingMsgResp);
	rpc ReportNodeCheck(TraceReport) returns (TraceReportResp);
}